app/assets/stylesheets/styles/header.scss
@import "../base/globals";

.nav-wrapper {
  width: 100%;
  height: 55px;
  background: $dark;
  position:fixed;

  .navbar {

    padding: 0 55px;
    background-color: $dark;
    color: $white;
    display: flex;
    height: 55px;
    align-items: center;

    div {
      justify-content: space-around;
    }

    .logo-search {
      display: flex;
      justify-content: flex-start;
      align-items: center;
      height: 36px;
      flex: 1;

      .logo {
        display: flex;
        justify-content: flex-start;
        align-items: center;
        font-size: 30px;
        flex: 1;
      }

      .asset-search-module {

        display: flex;
        justify-content: flex-start;
        background-color: $dark;
        height: 90%;
        flex: 3;
        border: 1px solid $darker;
        border-radius: 4px;
        align-items: center;
        position: relative;

        .asset-search-icon {
          padding: 0 10px 0 20px ;

          color: $grey;
        }


        .asset-search-input {

          display: flex;
          justify-content: flex-start;
          width: 90%;
          height: 100%;
          background-color: transparent;
          border: none;
          font-size: 14px;
          padding-left: 10px;
          color: $white;
        }
        textarea:focus, input:focus{
          outline: none;
        }




        .results-container {

          border-radius: 4px;
          top: 28px;
          margin-top: 10px;
          padding-bottom: 10px;
          position: absolute;
          font-size: 14px;
          margin-left: -1px;

          width: 100%;

          background-color: $dark;
          border: 1px solid $dark;
          -webkit-box-shadow: 0px 0px 13px 3px rgba(14,13,13,1);
          -moz-box-shadow: 0px 0px 13px 3px rgba(14,13,13,1);
          box-shadow: 0px 0px 13px 3px rgba(14,13,13,1);
        }

        .dark-block {
          z-index: 1;
          margin-top: 18px;
          margin-left: -1px;
          height: 12px;
          background-color: $dark;
          border: 1px solid $dark;
          position: absolute;
          width: 100%;
        }

        .hidden {
          display: none;
        }


        table {

          width: 100%;
          font-weight: 500;

          tr {
            margin: 5px 0;

            .heading {
              color: #8C8C8E;
              padding: 5px 5px 10px 56px;
            }

            .search-symbol {
              padding: 5px 5px 5px 56px;
            }

            .search-name {
              padding-right: 30%;
            }
          }

          .result:hover {
            cursor: pointer;
            color: $green;
            background-color: $sort-of-dark;
          }

        }
      }

      // handle hovers

      .asset-search-module:hover,
      .asset-search-module:focus-within, .shadow {
        border: 1px solid $dark;
        -webkit-box-shadow: 0px 0px 13px 3px rgba(14,13,13,1);
        -moz-box-shadow: 0px 0px 13px 3px rgba(14,13,13,1);
        box-shadow: 0px 0px 13px 3px rgba(14,13,13,1);
      }

      .asset-search-module:hover .asset-search-icon,
      .asset-search-module:focus-within .asset-search-icon {
        color: $white;
      }

      .asset-search-module:hover ::placeholder {
        color: $white;
      }
    }


    .nav-links {
      display: flex;
      justify-content: flex-end;
      flex: 1;
      width: 100px;

      .link, div {
        text-decoration: none;
        font-size: 14px;
        letter-spacing: .25px;
        line-height: 19px;
        font-weight: 500;
        margin-left: 25px;
        color: $white;
      }

      .link {
        cursor: pointer;
      }
      .link:hover {
        color: $red;
      }
    }

    ::placeholder {
      color: $grey;
    }
  }
}

